# gapi

./: LICENSE  README.md  main.py  pyproject.toml
gapi/: __init__.py  _app.py  _models.py  _objects.py
gapi/templates/: base.html  index.html
tests/: test_api.py  test_gp.py
